@@ -1,6 +1,8 @@
 DIST admin-tools-0.7.tar.bz2 2768 RMD160 9be6a07f4ab839b4d0161932dc227435eae83e0e SHA1 8e1bf03614c2a6b94e2f3244b0c482389560d8c8 SHA256 c96a4cc83f4ca95dc455c98f60c2fcea16adc79dbfd775cf4f4b74bc9927fcd8
 DIST admin-tools-0.8.tar.bz2 2823 RMD160 b92cd6d69fd215fe9c0cf39bf6ea822176932994 SHA1 e07ca9181156cd5d13bfc4d33e2a679dbefdcbfa SHA256 62ad4c6aa88511994841af5c5633d8468eb6d6e3d7e137d9176db6e545c94a97
+DIST admin-tools-0.9.tar.bz2 3476 RMD160 4fcd5de85d4cc2c1e9bd3b0c7680f09e2c4e8ab9 SHA1 19881f4b0413b6aeb69650ebeb2656bb0a01dc8b SHA256 63eeaf42c15e3f0a0c721c13abfb94baac7434e7adba5a8cb357ec05efc46358
 EBUILD admin-tools-0.7.ebuild 706 RMD160 0d0fbf48158c2f3dcbb727dfc16cb22876fc1266 SHA1 7cb0ae55492c4bdafbe86cb711465f661762be34 SHA256 4c8b5da941de03b80212f0ed5107d976393bd2d539409fc537ca22048aef750c
 EBUILD admin-tools-0.8.ebuild 706 RMD160 0d0fbf48158c2f3dcbb727dfc16cb22876fc1266 SHA1 7cb0ae55492c4bdafbe86cb711465f661762be34 SHA256 4c8b5da941de03b80212f0ed5107d976393bd2d539409fc537ca22048aef750c
-MISC ChangeLog 635 RMD160 2452cf046be638a971cbd36a0704bd504eb75403 SHA1 b4a4d0f2ef292157ae5621e3cb1a883155bd931e SHA256 fbc216a173c0a00f81aeffefa00ff61dbbc345dd16ddb96304605a9e5a638223
+EBUILD admin-tools-0.9.ebuild 742 RMD160 4654f532c028adf688320d4b83cc5dec5e7d6a8b SHA1 0fe981f62ef759b1a84ad6442203076f61cbd6a2 SHA256 2c425818d2d7b5dd60f000b57f365cee9dd8eb976fa018dd0789b01cab9fe0e9
+MISC ChangeLog 723 RMD160 29223f7cf382dd033d46e126b65fc436705a9e34 SHA1 ceac674715b815ca59a62de936272321664e0aba SHA256 4206004e821c7568f29f609ba84b27cb00ee262e0637f1c84100d8a7432a48ed
 MISC metadata.xml 360 RMD160 d7d4df2bf3ac34a965a910d1694e038ffec210b7 SHA1 8e6676b11f7752f8c79d9a07aad96f887a25dfcf SHA256 d10f0e802b5c8ffb5407cfdea2960b2a8de3c7861830f46002392b24885efed8
