@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/admin-tools
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  05 Jan 2011; Justin Lecher <jlec@gentoo.org> +admin-tools-0.9.ebuild:
+  Version Bump
 
   26 Dec 2010; Justin Lecher <jlec@gentoo.org> +admin-tools-0.7.ebuild:
   Version Bump
